--- a/sites/extensions/composer.json
+++ b/sites/extensions/composer.json
@@ -1,7 +1,5 @@
 {
-    "require": {
-
-    },
+    "require": [],
     "repositories": {
         "bolt": {
             "type": "composer",
@@ -16,7 +14,7 @@
         "preferred-install": "dist"
     },
     "provide": {
-        "bolt/bolt": "2.0.6"
+        "bolt/bolt": "2.1.0"
     },
     "scripts": {
         "post-package-install": "Bolt\\Composer\\ExtensionInstaller::handle",
@@ -26,8 +24,8 @@
         "bolt-web-path": ".././"
     },
     "autoload": {
-        "files": [
-            "installer.php"
-        ]
+        "psr-4": {
+            "Bolt\\Composer\\": ""
+        }
     }
 }
